--- a/blueprints/automation/motion-detection-with-sun-condition.yaml
+++ b/blueprints/automation/motion-detection-with-sun-condition.yaml
@@ -10,7 +10,7 @@ blueprint:
       selector:
         entity:
           domain: binary_sensor
-          device_class: motion
+          device_class: occupancy
           multiple: false
     light_target:
       name: Light
