refactor: change action if to choose

--- a/blueprints/automation/contact_switch.yaml
+++ b/blueprints/automation/contact_switch.yaml
@@ -44,7 +44,7 @@ blueprint:
 mode: restart
 max_exceeded: silent
 variables:
-  contact_entity: !input 'contact_entity' 
+  contact: !input 'contact_entity' 
   switch_target: !input 'switch_target'
   night_time: !input 'night_time'
   auto_close_wait: !input 'auto_close_wait'
@@ -59,7 +59,7 @@ trigger:
     from: 'on'
     to: 'off'
     id: closed
-condition:
+conditions:
   - condition: and
     conditions:
       - condition: state
@@ -67,52 +67,57 @@ condition:
         state: below_horizon
       - condition: template
         value_template: "{{ night_time != none and is_state(night_time, 'off') }}"
-action:
-  - if:
-      - condition: trigger
-        id:
-          - open
-    then:
-      - if:
-          - condition: template
-            value_template: "{{  expand(switch_target.entity_id)  | selectattr('state', 'eq', 'off') | list | count > 0 }}"
-        then:
-          # switch it on baby!
-          - service: switch.turn_on
-            target: "{{ switch_target }}"
-          - service: light.turn_on
-            target: "{{ switch_target }}"
-        else:
-          # switch off by openening and closing within 2 seconds
-          - wait_for_trigger:
-              - platform: state
-                entity_id: !input 'contact_entity'
-                to: "off"
-            timeout:
-              hours: 0
-              minutes: 0
-              seconds: 2
-              milliseconds: 0
-            continue_on_timeout: false
-          - service: switch.turn_off
-            data: {}
-            target: "{{ switch_target }}"
-          - service: light.turn_off
-            data: {}
-            target: "{{ switch_target }}"
-          
-    else:
-      # switch when door is opened and closed within 25 seconds
-      - if:
-          - condition: template
-            value_template: "{{ expand(switch_target.entity_id) | selectattr('last_changed', '>', now() - timedelta(seconds=auto_close_wait)) | list | count > 0 }}"
-        then:
-          - delay:
-              hours: 0
-              minutes: 0
-              seconds: 15
-              milliseconds: 0
-          - service: switch.turn_off
-            target: "{{ switch_target }}"
-          - service: light.turn_off
-            target: "{{ switch_target }}"
+actions:
+  - choose:
+      - conditions:
+          - condition: and
+            conditions:
+              - condition: trigger
+                id: open
+        sequence:
+          - if:
+              - condition: template
+                value_template: "{{  expand(switch_target.entity_id)  | selectattr('state', 'eq', 'off') | list | count > 0 }}"
+            then:
+              # switch it on baby!
+              - service: switch.turn_on
+                target: "{{ switch_target }}"
+              - service: light.turn_on
+                target: "{{ switch_target }}"
+            else:
+              # switch off by openening and closing within 2 seconds
+              - wait_for_trigger:
+                  - platform: state
+                    entity_id: !input 'contact_entity'
+                    to: "off"
+                timeout:
+                  hours: 0
+                  minutes: 0
+                  seconds: 2
+                  milliseconds: 0
+                continue_on_timeout: false
+              - service: switch.turn_off
+                data: {}
+                target: "{{ switch_target }}"
+              - service: light.turn_off
+                data: {}
+                target: "{{ switch_target }}"
+      - conditions:
+          - condition: trigger
+            id: closed
+        sequence:
+          # switch when door is opened and closed within 25 seconds
+          - if:
+              - condition: template
+                value_template: "{{ expand(switch_target.entity_id) | selectattr('last_changed', '>', now() - timedelta(seconds=auto_close_wait)) | list | count > 0 }}"
+            then:
+              - delay:
+                  hours: 0
+                  minutes: 0
+                  seconds: 15
+                  milliseconds: 0
+              - service: switch.turn_off
+                target: "{{ switch_target }}"
+              - service: light.turn_off
+                target: "{{ switch_target }}"
+ 
