feat: support presence detection in motion-activated light automation

--- a/blueprints/automation/motion-detection-with-sun-condition.yaml
+++ b/blueprints/automation/motion-detection-with-sun-condition.yaml
@@ -10,7 +10,9 @@ blueprint:
       selector:
         entity:
           domain: binary_sensor
-          device_class: occupancy
+          device_class: 
+            - occupancy
+            - presence
           multiple: false
     light_target:
       name: Light
