fix: correct variable name for night temperature input in heating control automation

--- a/blueprints/automation/heating_control.yaml
+++ b/blueprints/automation/heating_control.yaml
@@ -166,7 +166,7 @@ variables:
   thermostats: !input "thermostats"
   valves: "{{ expand(thermostats) | map(attribute='entity_id') | list }}"
   # temperatures
-  night_temp: !input "night_temp_input"
+  night_temp_input: !input "night_temp_input"
   eco_temp: !input "min_temp"
   eco_temp_input: !input "min_temp_input"
   comfort_temp: !input "comfort_temp"
