fix: correct alarm condition logic in heating control automation

--- a/blueprints/automation/heating_control.yaml
+++ b/blueprints/automation/heating_control.yaml
@@ -200,7 +200,7 @@ variables:
         {% set is_alarm = true %}
       {% endif %}
     {% endif %}
-    {{ night == true and alarm_time != none and is_alarm }}
+    {{ night == true and is_alarm == true }}
   use_scheduler: "{{ alarm_time == none or night == false or pre_alarm == true }}"
   heating_enabled: "{{ (winter_active or force_heat) and not window_open }}"
 
